@@ -28,7 +28,7 @@ CXXFLAGS="-O2"
   27638	   3248	   1136	  32022	   7d16	tvguid16
   30768	  16652	     16	  47436	   b94c	tvlife
   19972	   1908	      4	  21884	   557c	validator
-  29343	   2424	   5432	  37199	   914f	tvhc
+  26779	   2040	   5432	  34251	   85cb	tvhc
  552003	  47448	  20904	 620355	  97743	libtvision.so.0.0.8
 
 
@@ -67,7 +67,7 @@ CXXFLAGS="-O2 -flto"
   23696	   2780	   1160	  27636	   6bf4	tvguid16
   28321	  16660	     16	  44997	   afc5	tvlife
   16910	   1940	      4	  18854	   49a6	validator
-  24744	   2352	   5360	  32456	   7ec8	tvhc
+  21750	   1992	   5360	  29102	   71ae	tvhc
  528818	  43992	  20648	 593458	  90e32	libtvision.so.0.0.8
 
 
@@ -106,7 +106,7 @@ CXXFLAGS="-Os"
   23207	   2776	   1136	  27119	   69ef	tvguid16
   27257	  16652	     16	  43925	   ab95	tvlife
   17525	   1932	      4	  19461	   4c05	validator
-  25217	   2552	   5432	  33201	   81b1	tvhc
+  24061	   2512	   5432	  32005	   7d05	tvhc
  503988	  47904	  20904	 572796	  8bd7c	libtvision.so.0.0.8
 
 
@@ -145,7 +145,7 @@ CXXFLAGS="-Os -flto"
   21849	   2764	   1160	  25773	   64ad	tvguid16
   25548	  16652	     16	  42216	   a4e8	tvlife
   16271	   1892	      4	  18167	   46f7	validator
-  19895	   1720	   5360	  26975	   695f	tvhc
+  18739	   1680	   5360	  25779	   64b3	tvhc
  468238	  43976	  20672	 532886	  82196	libtvision.so.0.0.8
 
 
@@ -184,7 +184,7 @@ CXXFLAGS="-Os -flto -fno-exceptions -fno-rtti"
   20114	   2396	   1160	  23670	   5c76	tvguid16
   23198	  16284	     16	  39498	   9a4a	tvlife
   14619	   1572	      4	  16195	   3f43	validator
-  17897	   1160	   5360	  24417	   5f61	tvhc
+  16858	   1120	   5360	  23338	   5b2a	tvhc
  427660	  40328	  20672	 488660	  774d4	libtvision.so.0.0.8
 
 
